--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
 apply plugin: 'spring-boot'
+//Medir la cobertura del código en la ejecución de las pruebas
+apply plugin: 'jacoco'
 
 jar {
 	baseName = 'dia4'
@@ -39,3 +41,11 @@ eclipse {
 		 containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
 	}
 }
+
+jacoco {
+	//usar una version mas reciente
+	toolVersion = "0.7.8"
+}
+
+//esto le indica a Gradle que realice el reporte de cobertura en las pruebas
+check.dependsOn jacocoTestReport
