agregada confg checkstyle.

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ apply plugin: 'eclipse'
 apply plugin: 'spring-boot'
 //Medir la cobertura del código en la ejecución de las pruebas
 apply plugin: 'jacoco'
+apply plugin: 'checkstyle'
 
 jar {
 	baseName = 'dia4'
