--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ check.dependsOn jacocoTestReport
 
 tasks.withType(FindBugs) {
 	reports {
-		xml.enabled false
-		html.enabled true
+		xml.enabled true
+		html.enabled false
 	}
 }
